@@ -13,6 +13,7 @@ dillo-2.2 [??]
  - Ignore XML comment markers in CSS.
  - Split up long lines in plain.cc to avoid X11 coordinate overflows.
  - Fix user agent style for nested <ul>.
+ - Add support for CSS property list-style-position.
    Patch: Johannes Hofmann
 +- Cleaned up system includes in dpid directory.
  - Fixed CustProgressBox() for systems without weak symbols.
